Fixes new report front-end process visibility

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -225,6 +225,7 @@ template-field-directive {
  */
 
 .approach {
+    overflow: hidden;
 
     position: relative;
     img {
